--- a/accounts/templates/index.html
+++ b/accounts/templates/index.html
@@ -13,7 +13,7 @@
                 <a href="#">Login</a>
             </li>
             <li>
-                <a href="#">Logout</a>
+                <a href="{% url 'logout' %}">Logout</a>
             </li>
             <li>
                 <a href="#">Register</a>
