--- a/accounts/templates/index.html
+++ b/accounts/templates/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Django Auth</title>
 </head>
+
 <body>
     <nav>
         <ul>
@@ -23,5 +25,14 @@
             </li>
         </ul>
     </nav>
+    <hr> 
+    {% if messages %}
+    <div>
+        {% for message in messages %}
+            {{ message }}
+        {% endfor %}
+    </div>
+    {% endif %}
 </body>
+
 </html>
