--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Home</h1>
+    <h1>User Login</h1>
     <nav>
         <ul>
             <li>
@@ -28,11 +28,13 @@
     </nav>
     <hr> {% if messages %}
     <div>
-        {% for message in messages %} 
-            {{ message }} 
-        {% endfor %}
+        {% for message in messages %} {{ message }} {% endfor %}
     </div>
     {% endif %}
+
+    <form method="POST">
+        {{ login_form }}
+    </form>
 </body>
 
 </html>
