--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -33,7 +33,9 @@
     {% endif %}
 
     <form method="POST">
+        {% csrf_token %}
         {{ login_form }}
+        <button type="submit">Login</button>
     </form>
 </body>
 
