--- a/templates/base.html
+++ b/templates/base.html
@@ -13,18 +13,21 @@
 
     <nav>
         <ul>
+            {% if user.is_authenticated %}
             <li>
-                <a href="{% url 'login' %}">Login</a>
+                <a href="#">Profile</a>
             </li>
             <li>
                 <a href="{% url 'logout' %}">Logout</a>
             </li>
+            {% else %}
+            <li>
+                <a href="{% url 'login' %}">Login</a>
+            </li>
             <li>
                 <a href="#">Register</a>
             </li>
-            <li>
-                <a href="#">Profile</a>
-            </li>
+            {% endif %}
         </ul>
     </nav>
     <hr> {% if messages %}
