--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
                 <a href="{% url 'login' %}">Login</a>
             </li>
             <li>
-                <a href="#">Register</a>
+                <a href="{% url 'registration' %}">Register</a>
             </li>
             {% endif %}
         </ul>
