--- a/accounts/templates/registration.html
+++ b/accounts/templates/registration.html
@@ -14,4 +14,9 @@
 
 <p>If you already have an account, you can <a href="{% url 'login' %}">sign in here</a></p>
 
+<form method="POST">
+    {% csrf_token %} {{ registration_form.as_p }}
+    <button type="submit">Register</button>
+</form>
+
 {% endblock %}
