added basic profile page

--- a/accounts/templates/index.html
+++ b/accounts/templates/index.html
@@ -2,11 +2,11 @@
 
 <!-- block for title -->
 
-{% block page_title %} Login Page {% endblock %}
+{% block page_title %} Home Page {% endblock %}
 
 <!-- block for heading -->
 
-{% block page_heading %} User Login {% endblock %}
+{% block page_heading %} Home {% endblock %}
 
 <!-- main content block -->
 
