--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -16,4 +16,6 @@
     <button type="submit">Login</button>
 </form>
 
+<p><a href="{% url 'password_reset' %}">Reset Password</a></p>
+
 {% endblock %}
