--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load bootstrap_tags %}
+
 <!-- block for title -->
 
 {% block page_title %} Login Page {% endblock %}
@@ -12,8 +14,8 @@
 
 {% block content %}
 <form method="POST">
-    {% csrf_token %} {{ login_form }}
-    <button type="submit">Login</button>
+    {% csrf_token %} {{ login_form | as_bootstrap }}
+    <button type="submit" class="btn btn-default">Login</button>
 </form>
 
 <p><a href="{% url 'password_reset' %}">Reset Password</a></p>
